--- a/UnrealProject/SampleProject/Config/DefaultEngine.ini
+++ b/UnrealProject/SampleProject/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Maps/World1.World1
+EditorStartupMap=/Game/Maps/World1.World1
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
