--- a/UnrealProject/SampleProject/Config/DefaultEngine.ini
+++ b/UnrealProject/SampleProject/Config/DefaultEngine.ini
@@ -1,8 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/World1.World1
+GameDefaultMap=/Game/Maps/Main.Main
 EditorStartupMap=/Game/Maps/World1.World1
+GameInstanceClass=/Game/Blueprints/AllLevels/GameInfoInstance.GameInfoInstance_C
+ServerDefaultMap=/Game/Maps/Main.Main
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -65,6 +67,20 @@ bUseCompression=False
 bLogFiles=False
 bReportStats=False
 ConnectionType=USBOnly
-bUseManualIPAddress=False
+bUseManualIPAddress=False 
 ManualIPAddress=
+
+[/Script/Engine.GameEngine]
++NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
+
+[OnlineSubsystem]
+DefaultPlatformService=Steam
+
+[OnlineSubsystemSteam]
+bEnabled=true
+SteamDevAppId=480
+
+
+[/Script/OnlineSubsystemSteam.SteamNetDriver]
+NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 
