버그 수정완료
client에서 선택한 캐릭터가 아닌 default pawn이 spawn되는 버그 수정

--- a/UnrealProject/SampleProject/Config/DefaultEngine.ini
+++ b/UnrealProject/SampleProject/Config/DefaultEngine.ini
@@ -2,9 +2,10 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/Main.Main
-EditorStartupMap=/Game/Maps/World1.World1
+EditorStartupMap=/Game/Maps/Main.Main
 GameInstanceClass=/Game/Blueprints/AllLevels/GameInfoInstance.GameInfoInstance_C
 ServerDefaultMap=/Game/Maps/Main.Main
+TransitionMap=/Game/Maps/TravelMap.TravelMap
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
