--- a/UnrealProject/SampleProject/Config/DefaultEngine.ini
+++ b/UnrealProject/SampleProject/Config/DefaultEngine.ini
@@ -71,6 +71,7 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False 
 ManualIPAddress=
 
+
 [/Script/Engine.GameEngine]
 +NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
 
@@ -81,7 +82,8 @@ DefaultPlatformService=Steam
 bEnabled=true
 SteamDevAppId=480
 
+; If using Sessions
+; bInitServerOnClient=true
 
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
 NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
-
