맵 내보내기 기능 구현

--- a/SampleMapTool/x64/Release/imgui.ini
+++ b/SampleMapTool/x64/Release/imgui.ini
@@ -1,6 +1,26 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=1268,10
 Size=400,400
+Collapsed=0
+
+[Window][Transform]
+Pos=517,5
+Size=285,250
+Collapsed=0
+
+[Window][]
+Pos=0,0
+Size=200,55
+Collapsed=0
+
+[Window][Object Rotation]
+Pos=531,86
+Size=263,48
+Collapsed=0
+
+[Window][Editor]
+Pos=1660,0
+Size=260,340
 Collapsed=0
 
 [Window][ctrl]
@@ -9,12 +29,7 @@ Size=200,55
 Collapsed=0
 
 [Window][Snapping]
-Pos=215,1
+Pos=202,1
 Size=170,140
-Collapsed=0
-
-[Window][Editor]
-Pos=1660,0
-Size=260,340
 Collapsed=0
 
