디버그용 출력 삭제

--- a/UnrealProject/SampleServer_Unreal/Config/DefaultEngine.ini
+++ b/UnrealProject/SampleServer_Unreal/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+EditorStartupMap=/Game/Static/MyMap/Test_Map_Load.Test_Map_Load
 GlobalDefaultGameMode="/Script/NPC_World.NPC_WorldGameMode"
 
 [/Script/Engine.RendererSettings]
