캐릭터 선택 창 서버한테 패킷 보내기 구현 완료

--- a/UnrealProject/SampleServer_Unreal/Config/DefaultEngine.ini
+++ b/UnrealProject/SampleServer_Unreal/Config/DefaultEngine.ini
@@ -2,6 +2,7 @@
 GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
 EditorStartupMap=/Game/Static/MyMap/Test_Map_Server.Test_Map_Server
 GlobalDefaultGameMode="/Script/NPC_World.NPC_WorldGameMode"
+GameInstanceClass=/Script/NPC_World.MyGameInstance
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
