--- a/UnrealProject/SampleServer_Unreal 5.3/.gitignore
+++ b/UnrealProject/SampleServer_Unreal 5.3/.gitignore
@@ -38,7 +38,7 @@
 ### UnrealEngine ###
 # Visual Studio 2015 user specific files
 .vs/
-
+Content/StarterContent/
 # Compiled Object files
 
 # Precompiled Headers
