--- a/Server/ServerTest/ServerTest/ServerTest.vcxproj
+++ b/Server/ServerTest/ServerTest/ServerTest.vcxproj
@@ -150,6 +150,7 @@
     <ClInclude Include="protocol.h" />
     <ClInclude Include="SESSION.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="types.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Item.cpp" />
