--- a/Server/ServerTest/ServerTest/ServerTest.vcxproj.filters
+++ b/Server/ServerTest/ServerTest/ServerTest.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="Json.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="types.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="server.cpp">
