--- a/Server/ServerTest/ServerTest/ServerTest.vcxproj
+++ b/Server/ServerTest/ServerTest/ServerTest.vcxproj
@@ -71,16 +71,16 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>E:\g_project\graduation-project\Server\ServerTest\libraries\rapidjson-master\include;$(IncludePath)</IncludePath>
+    <IncludePath>../libraries/rapidjson-master/include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>E:\g_project\graduation-project\Server\ServerTest\libraries\rapidjson-master\include;$(IncludePath)</IncludePath>
+    <IncludePath>../libraries/rapidjson-master/include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>E:\g_project\graduation-project\Server\ServerTest\libraries\rapidjson-master\include;$(IncludePath)</IncludePath>
+    <IncludePath>../libraries/rapidjson-master/include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>E:\g_project\graduation-project\Server\ServerTest\libraries\rapidjson-master\include;$(IncludePath)</IncludePath>
+    <IncludePath>../libraries/rapidjson-master/include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
