--- a/Server/ServerTest/ServerTest/ServerTest.vcxproj.filters
+++ b/Server/ServerTest/ServerTest/ServerTest.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="ItemBox.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Jelly.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="server.cpp">
@@ -78,6 +81,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="ItemBox.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Jelly.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
