aim 상태 동기화

--- a/UnrealProject/SampleServer_Unreal 5.3/.gitignore
+++ b/UnrealProject/SampleServer_Unreal 5.3/.gitignore
@@ -283,7 +283,7 @@ DocProject/Help/html
 
 # Click-Once directory
 publish/
-
+enc_temp_folder/
 # Publish Web Output
 *.[Pp]ublish.xml
 *.azurePubxml
