맵 로딩 구현

--- a/UnrealProject/SampleServer_Unreal 5.3/Config/DefaultEngine.ini
+++ b/UnrealProject/SampleServer_Unreal 5.3/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
 EditorStartupMap=/Game/Static/MyMap/MainMenu.MainMenu
 GlobalDefaultGameMode="/Script/NPC_World.NPC_WorldGameMode"
-GameInstanceClass=/Script/NPC_World.MyGameInstance
+GameInstanceClass=/Game/Blueprints/BP_MyGameInstance.BP_MyGameInstance_C
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
