--- a/Server/Single Thread ASIO/Single Thread ASIO.vcxproj
+++ b/Server/Single Thread ASIO/Single Thread ASIO.vcxproj
@@ -148,9 +148,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="source\Bomb.cpp" />
     <ClCompile Include="source\Fuse.cpp" />
     <ClCompile Include="source\FuseBox.cpp" />
-    <ClCompile Include="source\Gun.cpp" />
     <ClCompile Include="source\IngameData.cpp" />
     <ClCompile Include="source\IngameMapData.cpp" />
     <ClCompile Include="source\ItemBox.cpp" />
@@ -161,10 +161,10 @@
     <ClCompile Include="source\Session.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="source\Bomb.h" />
     <ClInclude Include="source\Fuse.h" />
     <ClInclude Include="source\FuseBox.h" />
     <ClInclude Include="source\Global.h" />
-    <ClInclude Include="source\Gun.h" />
     <ClInclude Include="source\IngameData.h" />
     <ClInclude Include="source\IngameMapData.h" />
     <ClInclude Include="source\ItemBox.h" />
