--- a/UnrealProject/SampleServer_Unreal 5.3/Config/DefaultEngine.ini
+++ b/UnrealProject/SampleServer_Unreal 5.3/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+GameDefaultMap=/Game/Static/MyMap/MainMenu.MainMenu
 EditorStartupMap=/Game/Static/MyMap/MainMenu.MainMenu
 GlobalDefaultGameMode="/Script/NPC_World.NPC_WorldGameMode"
 GameInstanceClass=/Game/Blueprints/BP_MyGameInstance.BP_MyGameInstance_C
+ServerDefaultMap=/Game/Static/MyMap/MainMenu.MainMenu
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
