--- a/UnrealProject/SampleServer_Unreal 5.3/Config/DefaultGame.ini
+++ b/UnrealProject/SampleServer_Unreal 5.3/Config/DefaultGame.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=AA1F02064BF6AA2DA9B598B1A957E05F
-ProjectName=Third Person Game Template
+ProjectName=The Toys
 bAllowMaximize=True
 
 [StartupActions]
