[클라] 콜리전 정보 수정 및 사망 후 컨트롤 안되게 수정

--- a/UnrealProject/SampleServer_Unreal 5.3/Config/DefaultEngine.ini
+++ b/UnrealProject/SampleServer_Unreal 5.3/Config/DefaultEngine.ini
@@ -15,6 +15,10 @@ r.Mobile.EnableNoPrecomputedLightingCSMShader=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=true
 r.CustomDepth=3
+r.DefaultFeature.AutoExposure.Bias=1.000000
+r.DefaultFeature.AutoExposure=True
+r.DefaultFeature.LocalExposure.ShadowContrastScale=0.600000
+r.DefaultFeature.LocalExposure.HighlightContrastScale=1.000000
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
