--- a/Server/Lobby Server/Lobby Server.vcxproj.filters
+++ b/Server/Lobby Server/Lobby Server.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Over_Exp.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="lSession.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Session.h">
@@ -33,6 +36,12 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Global.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="lSession.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="LobbyProtocol.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
